vaultwarden/templates/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: traefik
  hostnames:
  - "bitwarden.engiqueer.net"
  - "vaultwarden.engiqueer.net"
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: vaultwarden
      port: 80
      weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
